# sbom-to-snyk-depgraph

./: README.md  pyproject.toml
.github/workflows/: example-gradle.yml
.github/workflows/example-gradle/hibernate-sample/: README.md  build.gradle.kts  docker-compose.yml  init.sql  settings.gradle.kts
.github/workflows/example-gradle/hibernate-sample/config/checkstyle/: checkstyle.xml
.github/workflows/example-gradle/hibernate-sample/config/pmd/: pmd.xml
.github/workflows/example-gradle/hibernate-sample/config/spotbugs/: exclude.xml
.github/workflows/example-gradle/hibernate-sample/src/main/java/com/mfvanek/hibernate/: DemoFindApp.java  DemoInsertApp.java  DemoLiquibaseRunnerApp.java
.github/workflows/example-gradle/hibernate-sample/src/main/java/com/mfvanek/hibernate/entities/: TestEvent.java  TestEventInfo.java
.github/workflows/example-gradle/hibernate-sample/src/main/java/com/mfvanek/hibernate/enums/: TestEventType.java
.github/workflows/example-gradle/hibernate-sample/src/main/java/com/mfvanek/hibernate/utils/: PropertiesUtil.java  RowsCountValidator.java  ServiceRegistryUtil.java  SessionFactoryUtil.java
.github/workflows/example-gradle/hibernate-sample/src/main/resources/: hibernate.cfg.xml  logback.xml
.github/workflows/example-gradle/hibernate-sample/src/main/resources/db/changelog/1.0.0/: 1.0.0-1-creating-tables.xml  1.0.0-2-changing-primary-keys.xml
.github/workflows/example-gradle/hibernate-sample/src/test/java/com/mfvanek/hibernate/utils/: PropertiesUtilTest.java
sbom_to_snyk_depgraph/: main.py  snyk_depgraph.py
